# polygon-arbitrage-bot

./: .gitignore  Cargo.toml  README.md
Arbitrage bot UI/: package-lock.json  package.json
Arbitrage bot UI/src/: App.jsx
Arbitrage bot UI/src/components/: ArbitrageTable.jsx  ConfigPanel.jsx  Dashboard.jsx
arbitage bot UI/: index.html
arbitage bot UI/src/: styles.css
arbitage bot UI/src/components/: StatsCards.jsx  StatusBar.jsx
arbitage bot UI/src/hooks/: useArbitrageData.js
arbitage bot UI/src/utils/: formatters.js
config/: config.toml
src/: api.rs  arbitrage.rs  config.rs  db.rs  logger.rs  main.rs  models.rs  price_fetcher.rs
src/dex/: mod.rs  sushiswap.rs  uniswap.rs
