[package]
name = "polygon-arbitrage-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Polygon arbitrage opportunity detection bot"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
ethers = { version = "2.0", features = ["abigen", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
